lang/tests/compile_fail/instruction_borrowed_no_max.stderr
error: borrowed instruction args require #[max(N)] annotation
  --> tests/compile_fail/instruction_borrowed_no_max.rs:16:47
   |
16 |     pub fn bad_handler(ctx: Ctx<Args>, label: &str) -> Result<(), ProgramError> {
   |                                               ^^^^

error[E0425]: cannot find function `bad_handler` in this scope
  --> tests/compile_fail/instruction_borrowed_no_max.rs:16:12
   |
16 |     pub fn bad_handler(ctx: Ctx<Args>, label: &str) -> Result<(), ProgramError> {
   |            ^^^^^^^^^^^ not found in this scope
